v1.20_3
git-svn-id: http://svn.code.sf.net/p/supercsv/code/trunk@42 01ba9438-b82c-4373-9247-da971c9e6a59